--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -26,6 +26,33 @@ body{
     background-image: url(../Images/Background.jpg);
 }
 
+.menu{
+    position: absolute;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vmax;
+    height: 100vh;
+    
+    z-index: 10;
+    display: none;
+}
+
+.login{
+    background-color: rgb(0, 0, 0,0.8);
+}
+
+.marco{
+    margin-top: 150px;
+    width: 50%;
+    box-sizing: border-box;
+}
+
+.form-control{
+    width: 70%;
+    
+}
+
 .profile img{
     margin-top: -50px;
     max-width: 200px;
@@ -40,11 +67,10 @@ body{
 
 section{
     margin: 10px;
-    box-sizing: border-box;
 }
 
 .separator{
-    margin: 20px 200px 50px 200px;
+    margin: 20px 150px 50px 150px;
     border-bottom: 1px solid blue;
 }
 
@@ -57,7 +83,12 @@ ul{
 }
 
 .project-img{
-    max-width: 200px;
-    margin-left: 50px;
+    max-width: 400px;
+    box-sizing: border-box;
 }
+
+
+
+
+
 
